# chanim

./: LICENSE  README-हिन्दी.md  README-自述文件.md  README.md  __init__.py  chem_anims.py  chem_objects.py  compounds.py  constants.py  imports.py  pyproject.toml  setup.py  templates.py
chanim/: chem_anims.py  chem_objects.py  compounds.py  utils.py
chanimlib/: chem_objects.py  compounds.py  constants.py  imports.py
chanimlib/Chanim_projects/: Reactions.py  compound_test.py  compounds.py  new_year.py  test1.py
